@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.12 2001/12/03 18:17:51 ukai Exp $ */
+/* $Id: proto.h,v 1.13 2001/12/04 16:33:08 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -219,6 +219,7 @@ extern void disp_message_nomouse(char *s, int redraw_current);
 #else
 #define disp_message_nomouse disp_message
 #endif
+extern void set_delayed_message(char *s);
 extern void cursorUp(Buffer *buf, int n);
 extern void cursorDown(Buffer *buf, int n);
 extern void cursorUpDown(Buffer *buf, int n);
